<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.overview.OverviewFragment">
    <item
        android:id="@+id/action_details"
        android:orderInCategory="88"
        android:title="@string/details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="89"
        android:title="@string/menu_edit_car"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="90"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_component"
        android:orderInCategory="200"
        android:title="@string/menu_add_component"
        app:showAsAction="ifRoom" />
</menu>