<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="title"
            type="String" />
        <variable
            name="subTitle"
            type="String" />
        <variable
            name="body"
            type="String" />
        <variable
            name="settingsClickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="notNowClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/interstitialRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:background="@drawable/bg_round_corners"
        android:backgroundTint="?attr/backgroundColor">

        <TextView
            android:id="@+id/interstitialTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@{title}"
            android:textSize="@dimen/text_22"
            android:textColor="?android:textColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/missing_permission_interstitial_notification_title"
            tools:textColor="@color/black"/>

        <TextView
            android:id="@+id/interstitialSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{subTitle}"
            android:textSize="@dimen/text_16"
            android:textColor="?android:textColor"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/interstitialTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/missing_permission_interstitial_notification_subtitle"
            tools:textColor="@color/black"/>

        <TextView
            android:id="@+id/interstitialContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_8"
            android:paddingStart="@dimen/base_24"
            android:paddingEnd="@dimen/base_24"
            android:text="@{body}"
            android:textSize="@dimen/text_16"
            android:textColor="?android:textColor"
            app:layout_constraintTop_toBottomOf="@+id/interstitialSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/interstitialSettingsButton"
            tools:text="@string/missing_permission_interstitial_notification_content"
            tools:textColor="@color/black"/>

        <Button
            android:id="@+id/interstitialSettingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_16"
            android:backgroundTint="@color/indigo"
            android:text="@string/goto_settings"
            android:textColor="@color/white"
            android:onClick="@{settingsClickListener}"
            app:layout_constraintTop_toBottomOf="@+id/interstitialContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/interstitialNotNowButton" />

        <TextView
            android:id="@+id/interstitialNotNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_12"
            android:text="@string/not_now"
            android:textSize="@dimen/text_12"
            android:textColor="?android:textColor"
            android:onClick="@{notNowClickListener}"
            app:layout_constraintTop_toBottomOf="@+id/interstitialSettingsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>