<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import
            alias="View"
            type="android.view.View"/>
        <variable
            name="lastDateClickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="dueDateClickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="saveClickListener"
            type="android.view.View.OnClickListener" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/serviceModalRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/base_16"
            android:paddingEnd="@dimen/base_16"
            android:paddingBottom="@dimen/base_24"
            android:clickable="true">

        <TextView
            android:id="@+id/serviceModalTitleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_8"
            android:gravity="center"
            android:text="@string/new_service"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:textColor="?android:textColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:textColor="@color/black"/>

        <View
            android:id="@+id/serviceModalGrabView"
            android:layout_width="50dp"
            android:layout_height="@dimen/base_4"
            android:layout_margin="@dimen/base_16"
            android:background="@drawable/view_grab"
            android:backgroundTint="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/serviceModalTitleLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <EditText
            android:id="@+id/serviceModalNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_16"
            android:inputType="text"
            android:hint="@string/service_name"
            android:autofillHints=""
            android:textColorHint="@color/silver"
            android:textColor="?android:textColor"
            app:layout_constraintTop_toBottomOf="@+id/serviceModalGrabView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:textColor="@color/black"/>

        <EditText
            android:id="@+id/serviceModalLastDateField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_16"
            android:inputType="date"
            android:hint="@string/repair_date"
            android:autofillHints=""
            android:textColorHint="@color/silver"
            android:textColor="?android:textColor"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:onClick="@{lastDateClickListener}"
            app:layout_constraintTop_toBottomOf="@+id/serviceModalNameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/serviceModalLastDateCalendar"
            tools:textColor="@color/black" />
        <ImageView
            android:id="@+id/serviceModalLastDateCalendar"
            android:layout_width="@dimen/base_42"
            android:layout_height="@dimen/base_42"
            android:layout_marginTop="@dimen/base_16"
            android:contentDescription="@string/label_icon"
            android:onClick="@{lastDateClickListener}"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:tint="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/serviceModalNameField"
            app:layout_constraintStart_toEndOf="@id/serviceModalLastDateField"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/serviceModalDueDateField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_16"
            android:inputType="date"
            android:hint="@string/due_date"
            android:autofillHints=""
            android:textColorHint="@color/silver"
            android:textColor="?android:textColor"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:onClick="@{dueDateClickListener}"
            app:layout_constraintTop_toBottomOf="@+id/serviceModalLastDateField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/serviceModalDueDateCalendar"
            tools:textColor="@color/black"/>
        <ImageView
            android:id="@+id/serviceModalDueDateCalendar"
            android:layout_width="@dimen/base_42"
            android:layout_height="@dimen/base_42"
            android:layout_marginTop="@dimen/base_16"
            android:contentDescription="@string/label_icon"
            android:onClick="@{dueDateClickListener}"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:tint="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/serviceModalLastDateField"
            app:layout_constraintStart_toEndOf="@id/serviceModalDueDateField"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_16"
            android:text="@string/save"
            android:textColor="@color/silver"
            android:background="@drawable/bg_round_corners"
            app:backgroundTint="@color/mark_color"
            android:onClick="@{saveClickListener}"
            app:layout_constraintTop_toBottomOf="@id/serviceModalDueDateField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>