<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bridal_heath"
    tools:context=".overview.OverviewFragment">

    <ImageView
        android:id="@+id/overviewTopImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/label_artwork"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/overviewTopGuideline"/>

    <TextView
        android:id="@+id/overviewCarPlates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="XXX-XXX"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/overviewCarName"/>

    <TextView
        android:id="@+id/overviewCarName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/overviewCarDetails"/>

    <TextView
        android:id="@+id/overviewCarDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/overviewTopGuideline"
        tools:text="Year Make Model"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/overviewTopGuideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <TextView
        android:id="@+id/overviewDetailsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/overviewTopGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/overviewDetailsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_component"/>

</androidx.constraintlayout.widget.ConstraintLayout>